# bgfx-sample

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: ColorCube.h  Main.cpp  ShaderProgram.h  main.cpp
src/core/: Camera.h  GeometryChunk.h  IndexBuffer.cpp  IndexBuffer.h  RenderChunk.h  Renderer.cpp  Renderer.h  ShaderProgram.h  VertexBuffer.cpp  VertexBuffer.h
